fix overflow and simplify readme

--- a/main/static/css/cleanup.css
+++ b/main/static/css/cleanup.css
@@ -3,7 +3,7 @@
  * 10 |     color: $font_color;
  *    |            ^^^^^^^^^^^
  *    '
- *   scss/cleanup.scss 10:12  root stylesheet */
+ *   django/main/static/scss/cleanup.scss 10:12  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 10 \2502      color: $font_color;\a    \2502             ^^^^^^^^^^^\a    \2575 \a   scss/cleanup.scss 10:12  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 10 \2502      color: $font_color;\a    \2502             ^^^^^^^^^^^\a    \2575 \a   django/main/static/scss/cleanup.scss 10:12  root stylesheet";
 }
